--- a/mxnet-dataiter.cabal
+++ b/mxnet-dataiter.cabal
@@ -30,10 +30,15 @@ library
   build-depends:
       base >=4.7 && <5,
       template-haskell >= 2.10.0.0,
+      streaming >= 0.1.4.5,
       mxnet == 0.2.0.0
   exposed-modules:
-      MXNet.Core.IO.Internal.TH
+      MXNet.Core.IO.Internal, 
+      MXNet.Core.IO.DataIter
   other-modules:
       Paths_mxnet_dataiter
+      MXNet.Core.IO.Internal.TH
+  default-extensions:
+      FlexibleContexts, DataKinds, TypeOperators
   default-language: Haskell2010
 
