--- a/mxnet-dataiter.cabal
+++ b/mxnet-dataiter.cabal
@@ -66,7 +66,19 @@ test-suite conduit
 
 Executable lenet
     main-is:                lenet.hs
-    hs-source-dirs:         examples/mnist
+    hs-source-dirs:         examples
+    ghc-options:            -Wall
+    default-language:       Haskell2010
+    build-depends:          base >= 4.7 && < 5.0
+                          , unordered-containers >= 0.2.8
+                          , vector >= 0.12
+                          , mxnet >= 0.2.0.0
+                          , mxnet-nn
+                          , mxnet-dataiter
+
+Executable cifar10
+    main-is:                cifar10.hs
+    hs-source-dirs:         examples
     ghc-options:            -Wall
     default-language:       Haskell2010
     build-depends:          base >= 4.7 && < 5.0
