--- a/mxnet-dataiter.cabal
+++ b/mxnet-dataiter.cabal
@@ -66,6 +66,7 @@ test-suite conduit
 
 Executable lenet
     main-is:                lenet.hs
+    other-modules:          Model.Lenet
     hs-source-dirs:         examples
     ghc-options:            -Wall
     default-language:       Haskell2010
@@ -78,6 +79,7 @@ Executable lenet
 
 Executable cifar10
     main-is:                cifar10.hs
+    other-modules:          Model.Resnet
     hs-source-dirs:         examples
     ghc-options:            -Wall
     default-language:       Haskell2010
