--- a/mxnet-dataiter.cabal
+++ b/mxnet-dataiter.cabal
@@ -79,7 +79,8 @@ Executable lenet
 
 Executable cifar10
     main-is:                cifar10.hs
-    other-modules:          Model.Resnet
+    other-modules:          Model.Resnet,
+                            Model.Resnext
     hs-source-dirs:         examples
     ghc-options:            -Wall
     default-language:       Haskell2010
