--- a/stack.yaml
+++ b/stack.yaml
@@ -1,23 +1,19 @@
-resolver: lts-10.7
+resolver: lts-12.16
 packages:
-- .
+- cmdline
+- dataiter
 extra-deps:
-- git: https://github.com/pierric/mxnet-haskell.git
-  commit: d6358874c45bdebc35a151ebd6e1b861acfee738 
-  subdirs:
-  - mxnet
-- git: https://github.com/pierric/mxnet-nn
-  commit: 5b77f62b18aa4ff63f403545b34da544a594c3c2
-  subdirs:
-  - .
+- ../mxnet-hs/base
+- ../mxnet-hs/operators
+- ../mxnet-nn
+- ../tuple-ops
+- ../type-combinators
 - c2hs-extra-0.1.0.1
-- tuple-ops-0.0.0.1
 - streaming-utils-0.1.4.7
-- graphviz-2999.19.0.0
+- graphviz-2999.20.0.2
 - fgl-5.5.4.0
-allow-newer: true
 extra-include-dirs:
-- /home/jwu/incubator-mxnet/include
-- /home/jwu/incubator-mxnet/nnvm/include/
+- /home/jiasen/dschungel/incubator-mxnet/include
+- /home/jiasen/dschungel/incubator-mxnet/nnvm/include/
 extra-lib-dirs:
-- /home/jwu/incubator-mxnet/lib
+- /home/jiasen/dschungel/incubator-mxnet/lib
