--- a/stack.yaml
+++ b/stack.yaml
@@ -1,11 +1,9 @@
 resolver: lts-12.16
 packages:
-- cmdline
-- dataiter
+- . 
 extra-deps:
-- ../mxnet-hs/base
-- ../mxnet-hs/operators
-- ../mxnet-nn
+- ../fei-base
+- ../fei-nn
 - ../tuple-ops
 - git: https://github.com/kylcarte/type-combinators.git
   commit: 071942730b6bb34990d37e1a25236382cf0dcbc6
@@ -16,7 +14,10 @@ extra-deps:
 - graphviz-2999.20.0.2
 - fgl-5.5.4.0
 extra-include-dirs:
-- /home/jiasen/dschungel/incubator-mxnet/include
-- /home/jiasen/dschungel/incubator-mxnet/nnvm/include/
+- /home/jiasen/dschungel/incubator-mxnet-1.5/include
+- /home/jiasen/dschungel/incubator-mxnet-1.5/nnvm/include/
 extra-lib-dirs:
-- /home/jiasen/dschungel/incubator-mxnet/lib
+- /home/jiasen/dschungel/incubator-mxnet-1.5/lib
+flags:
+  fei-base:
+    MXNet_1_5: true
